fix(sidnav): fixed submenu when menu collapsed

--- a/src/components/SideNav/_side-nav.scss
+++ b/src/components/SideNav/_side-nav.scss
@@ -69,6 +69,7 @@
     }
 
     [aria-expanded='true'] + .#{$prefix}--side-nav__menu {
+      height: 0;
       .#{$prefix}--side-nav__link--current,
       .#{$prefix}--side-nav__link--current::before {
         background: $ui-05;
